syntax = "proto2";

package com.dafagame.protocol.bcbm;

//option optimize_for = LITE_RUNTIME;

enum GameType {
    BRCM = 106;
}
//奔驰宝马游戏场景的状态
enum State {
    Beting = 0;     //游戏状态 下注
    Stop = 1;       //停止下注
    Lottery = 2;    //开奖状态
    Pause = 3;      //暂停
}

// 投注盘口枚举
enum Pos {
    BaoShiJie_big = 0;    //大保时捷
    BaoShiJie_small = 1;  //小保时捷
    BaoMa_big = 2;        //大宝马
    BaoMa_small = 3;      //小宝马
    BenChi_big = 4;       //大奔驰
    BenChi_small = 5;     //小奔驰
    DaZhong_big = 6;      //大大众
    DaZhong_small = 7;    //小大众
}

enum ResultState {
    Lose = 1;       //输
    Win = 2;        //赢
}

//场次类型
enum RoundType {
    Round_ordinary = 101;                  //普通场
}

//消息号
enum ProtoType {

    BetReqType = 10655;               //奔驰宝马下注请求

    BetResType = 10656;               //奔驰宝马下注回应

    GoUpBankerReqType = 10657;        //奔驰宝马抢庄请求

    GoUpBankerResType = 10658;        //奔驰宝马抢庄回应

    BankerListType = 10659;           //上庄列表数据

    //BankerInfoType = 10660;           //奔驰宝马庄家信息通知

    //CountReqType = 10661;             //奔驰宝马输赢结果统计请求

    //CountResType = 10662;             //奔驰宝马赢得次数回应

    StartBetNtfType = 10663;             //游戏开始通知

//    PokerInfoNtfType = 10664;         //奔驰宝马信息通知

    StopBetNtfType = 10665;              //奔驰宝马停止下注

    EnterPlayerSceneNtfType = 10666;  //奔驰宝马进入场景的推送信息通知(包括断线重连进来)

    //RankSettleNtfType = 10667;        //特殊玩家结算通知

    PlayResultType = 10668;           //奔驰宝马输赢结果通知

    RankNtfType = 10669;              //奔驰宝马结算后的排行榜信息

    BetNtfType = 10670;               //奔驰宝马每桌的投注广播 每秒广播一次

    SpecialBetNtfType = 10671;        //特殊玩家投注广播

    OnlineNumberNtfType = 10672;      //在线人数广播

    GameMaintainNtfType = 10673;      //游戏维护

    GamePauseNtfType = 10674;         //游戏暂停

    GameRuleReqType = 10675;          //游戏规则

    GameRuleResType = 10676;

    DownBankerReqType = 10677;      //取消上庄

    DownBankerResType = 10678;

    ScenesReqType = 10679;

    ContinueBetReqType = 10680;		//续投

    OpenResultNtfType = 10681;         //游戏开奖结果通知
}

//
enum ErrorCode {
    OK = 1;
    ChipError = 2;                  //筹码错误
    PosError = 3;                   //盘口错误
    BankerBanBet = 4;               //庄家禁止下注
    StateError = 5;                 //状态错误
    NoMonery = 6;                   //余额不足
    BankerNoMonery = 7;             //庄家钱不够赔
    BetFull = 8;                    //达到下注限制
    BankerQueueFull = 9;            //上庄列表已满
    InBankerList = 10;              //已在上庄列表中
    NextInningDown = 11;            //上庄中 下局下庄
    NotInBankerList = 12;           //不在上庄列表中
    Continued = 13;		            //续投过了
    NoBeted = 14;		            //没有投过注
    ContinueNoMoney = 15;	        //续投余额不足
    ContinueBankerNoMoney = 16;     //续投庄家不够赔
    ContinueOk = 17;		        //续成功
    Failure = 18;			        //失败
    BanPlayerBanker = 19;           //禁止玩家上庄
    BanRobotBanker = 20;            //禁止机器人上庄
    TestBanBet = 21;                //玩家上庄测试账号不能下注
    NoBettingLimit = 22;            //投注额小于最小投注额
}

//奔驰宝马下注请求
message BetReq {
    repeated BetInfo betInfo = 1;
}

message BetInfo {
    required Pos pos = 1;           //押注区域
    repeated int32 amount = 2;      //选择金额
}
//奔驰宝马下注回应
message BetRes {
    repeated BetInfo betInfo = 1;
    optional int64 total = 3;
    optional ErrorCode errorCode = 2;
    optional int64 bettingLimit = 4;
}

//特殊玩家投注广播
message SpecialBetNtf {
    required int32 specialUid = 1;
    repeated BetInfo betInfo = 2;
}

//奔驰宝马抢庄请求
message GoUpBankerReq {
}

//奔驰宝马抢庄回应
message GoUpBankerRes {
    required ErrorCode errorCode = 1;
    optional string msg = 2;
}

//上庄列表数据
message BankerList {
    repeated BankerInfo bankerInfo = 1;
    required bool haveBanker = 2;   //是否有庄家
}

//庄家信息
message BankerInfo {
    optional string nickName = 1;          //庄家昵称
    optional string bankerMoney = 2;       //庄家的余额
    optional int32 grade = 3;               //庄家vip等级
    optional int32 avatar = 4;             //头像
    optional int32 frame = 5;               //相框
    optional int32 userId = 6;
    optional int32 type = 7;                //判断是否是真人 机器人服务用

}

////奔驰宝马输赢结果统计请求
//message CountReq {
//}
//
////奔驰宝马赢得次数回应
//message CountRes {
//    optional int32 roundCount = 1;         //总次数
//    optional string winCount = 2;          //八个盘口赢得次数统计[100,50,500,332,33,65,343,4]
//}

//游戏开始下注通知
message StartBetNtf {
    required string inning = 1;             //局号
    required int32 countDown = 2;          //时间
    optional bool canBet = 3;               //是否能投注 机器人服务用
//    optional BankerInfo bankerInfo = 3;    //庄家信息
}

//游戏停止下注通知
message StopBetNtf {
    required int32 countDown = 1;          //倒计时时间
}

//游戏开奖结果通知
message OpenResultNtf {
    required int32 countDown = 1;          //倒计时时间
    required string pokerType = 8;         //中奖盘口
    required string poker = 9;             //开奖位置
}

//游戏停止下注通知
//message LotteryNtf {
//    optional int32 countDown = 1;          //倒计时时间
//}

//桌子扑克信息
//message PokerInfo {
//	optional ResultState state = 1;  //输赢 庄家用
//	required PokerType type = 2;     //牌型
//	repeated int32 poker = 3;       //扑克牌信息
//	optional int64 amount = 4;       //盘口的钱
//}

// 玩家详细下注信息
message PlayerBetInfo {
    repeated int32 betList = 2;            // 区域下注明细
}

//奔驰宝马进入场景的推送信息通知(包括断线重连进来)
message EnterPlayerSceneNtf {
    required State state = 1;               //游戏状态
    optional int32 remainingTime = 2;      //状态剩余时间
    repeated string tableRecordList = 3;  //桌子的走势
    optional int32 bankerNeedMoney = 4;   //上庄需要的钱数
    repeated int64 playerAreaBet = 5;     //玩家各区域的投注
    repeated SpeacialPlayerInfo speacialBet = 6;  //特殊玩家投注
    repeated int64 roomAreaBet = 7;       //房间八个盘口的下注金额
    repeated int32 stateTime = 8;           //状态时间配置
    required string roundType = 9;         //场次类型
    required string roomId = 10;           //房间号
    required string inning = 11;            //期号
    optional bool isAllowBanker = 12;       //是否允许上庄
    optional string balance = 13;           //玩家的余额
    optional int32 onlineNumber = 14;      //在线人数
    optional int64 lastBet = 15;	        //上局投注
    optional BankerList bankerList = 16;   //庄家列表信息
    repeated int32 multipleEnum = 17;      //赔率配置
    repeated int32 chipEnum = 18;          //投注配置
    optional string pokerState = 19;        //输赢 庄家用 正 赢 负 输
    optional string pokerType = 20;         //开盘盘口
    optional string poker = 21;             //开奖位置
    repeated int32 histroyTimes = 22;       //历史次数统计
    optional int32 bankerTimes = 23;        //上庄次数
    optional int32 minBetNeed = 24;			//房间最低下注本金
}

//奔驰宝马玩家展示信息
//message DisplayPlayerInfo {
//	optional int64 uid = 1;			        //玩家id
//	optional string balance = 2;		    //玩家余额
//	optional string avatar = 3;		        //玩家头像信息
//	optional int32 grade = 4;               //vip等级
//	optional string nick_name = 5;          //昵称
//	optional int32 win_count = 6;           //神算子赢的次数
//}

//桌子的走势记录
//message TableRecord {
//	repeated int32 record_list = 1;
//}

//特殊玩家通知 结算时通知展示特殊玩家收益效果
//message RankSettleNtf {
//    repeated SpeacialPlayerInfo rankList = 1; //玩家排名的通知
//    optional SpeacialPlayerInfo banker = 2;    //庄稼输赢的分数
//}

//特殊玩家信息
message SpeacialPlayerInfo {
    required int32 userId = 1;           //玩家id
    optional double winAmount = 2;         //玩家赢取的金币 包含扣除服务费
    optional string balance = 3;            //玩家余额
    repeated int64 areaBet = 4;		        //各区域下注
    repeated int64 areaWin = 5;		        //各区域赢 没有扣除服务费
}

//玩家输赢结果通知
message PlayResult {
    optional int64 addAmount = 1;          //金钱变化 不包含服务费
    optional double tax = 2;                //服务费
    repeated int64 addAmountList = 3;      //玩家八个盘口分别增加的金币的列表 不包含服务费
    optional string balance = 4;            //最新余额
    optional SpeacialPlayerInfo player = 5; //玩家 当前是玩家才有值
    optional SpeacialPlayerInfo banker = 6; //庄家 不管当前是庄家还是玩家都有值
    optional string pokerState = 7;        //输赢 庄家用 正 赢 负 输
    optional string pokerType = 8;         //中奖盘口
    optional string poker = 9;             //开奖位置
    optional double otherTotal = 10;	   //当前为庄家时 玩家们的赢额 当前为玩家时 玩家们的赢额-当前玩家的赢额
}

//奔驰宝马信息通知
//message PokerInfoNtf {
//    optional string pokerState = 1;         //输赢 庄家用 正 赢 负 输
//    optional string pokerType = 2;          //中奖盘口
//    optional string poker = 3;              //开奖位置
//}


//排行榜信息
message RankNtf {
    repeated RankInfo rankList = 1;
}

//排行榜信息
message RankInfo {
    optional int32 userId = 1;
    optional int32 avatar = 2;
    optional string nickName = 3;
    optional int32 grade = 4;
    optional string balance = 5;
    optional int64 bettingAmount = 6;
    optional int32 winTimes = 7;
    optional int32 frame = 8;
}

//开奖位置的投注通知 每秒广播一次 不包含特殊玩家
message BetNtf {
    repeated int64 areaAmount = 1;         //各区域投注统计
    repeated IdAndAmount baoshijieBigInfo = 2;           //投注详细
    repeated IdAndAmount baoMaBigInfo = 3;             //投注详细
    repeated IdAndAmount benChiBigInfo = 4;           //投注详细
    repeated IdAndAmount daZhongBigInfo = 5;          //投注详细
    repeated IdAndAmount baoShiJieSmallInfo = 6;           //投注详细
    repeated IdAndAmount baoMaSmallInfo = 7;             //投注详细
    repeated IdAndAmount benChiSmallInfo = 8;           //投注详细
    repeated IdAndAmount daZhongSmallInfo = 9;          //投注详细
    optional int32 onlineNumber = 10;       //在线人数
}

message IdAndAmount{
    optional int32 userId = 1;
    optional int32 amount = 2;
}

//人数广播
message OnlineNumberNtf {
    optional int32 onlineNumber = 1;              //在线人数
}

//
message AreaBetInfo {
    // 下注区域
    required Pos pos = 1;
    // 对应的筹码列表
    repeated int32 amountList = 2;
}

message GameMaintainNtf {
    optional int32 state = 1;               //0开启  1 维护
}

message GamePauseNtf {
    optional int32 state = 1;               //0开启  1 暂停
}

message GameRuleReq{
}

message GameRuleRes{
    optional double service = 1;             //服务费
}


message DownBankerReq{

}

message DownBankerRes{
    optional ErrorCode code = 1;
}

message ScenesReq{

}

message ContinueBetReq{

}